--- a/base/templates/base/login_register.html
+++ b/base/templates/base/login_register.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 
+{% if page == 'login' %}
 <div>
     <form method="POST" action="">
         {% csrf_token %}
@@ -14,6 +15,26 @@
 
         <input type="submit" value="Login" />
     </form>
+
+    <p>Don't have an account?</p>
+    <a href="{% url 'register' %}">Register</a>
 </div>
+
+{% elif page == 'register' %}
+
+<div>
+    <form method="POST" action="">
+        {% csrf_token %}
+
+        {{form.as_p}}
+
+        <input type="submit" value="Register" />
+    </form>
+
+    <p>Already have an account?</p>
+    <a href="{% url 'login' %}">Login</a>
+</div>
+
+{% endif %}
 
 {% endblock content%}
