--- a/templates/main.html
+++ b/templates/main.html
@@ -11,13 +11,7 @@
   </head>
 
   <body>
-    {% include 'navbar.html' %} {% if messages %}
-    <ul class="messages">
-      {% for message in messages %}
-      <li>{{ message }}</li>
-      {% endfor %}
-    </ul>
-    {% endif %} {% block content %} {% endblock %}
+    {% include 'navbar.html' %} {% block content %} {% endblock %}
 
     <script src="{% static 'js/script.js' %}"></script>
   </body>
