--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -49,7 +49,7 @@
       </div>
 
       <div class="dropdown-menu">
-        <a href="settings.html" class="dropdown-link"
+        <a href="{% url 'update-user' %}" class="dropdown-link"
           ><svg
             version="1.1"
             xmlns="http://www.w3.org/2000/svg"
