--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -28,10 +28,11 @@
       <div class="header__user">
         <a href="{% url 'user-profile' request.user.id %}">
           <div class="avatar avatar--medium active">
-            <img src="https://randomuser.me/api/portraits/men/37.jpg" />
+            <img src="{{request.user.profile.picture.url}}" />
           </div>
           <p>
-            {{request.user.username}} <span>@{{request.user.username}}</span>
+            {{request.user.profile.name}}
+            <span>@{{request.user.username}}</span>
           </p>
         </a>
         <button class="dropdown-button">
@@ -88,7 +89,7 @@
 
       <!-- Not Logged In -->
       <a href="{% url 'login' %}">
-        <img src="{% static 'images/avatar.svg' %}" />
+        <img src="{% static 'images/default.svg' %}" />
         <p>Login</p>
       </a>
 
