new profile page with current progress

--- a/base/templates/base/profile.html
+++ b/base/templates/base/profile.html
@@ -1,51 +1,46 @@
 {% extends 'main.html' %} {% block content%}
 
-  <main class="profile-page layout layout--3">
-    <div class="container">
-      <!-- Topics Start -->
-      {% include 'base/topics_component.html' %}
-      <!-- Topics End -->
+<main class="profile-page layout layout--3">
+  <div class="container">
+    {% include 'base/side_nav.html' %}
 
-      <!-- Room List Start -->
-      <div class="roomList">
-        <div class="profile">
-          <div class="profile__avatar">
-            <div class="avatar avatar--large active">
-              <img src="https://randomuser.me/api/portraits/men/11.jpg" />
-            </div>
-          </div>
-          <div class="profile__info">
-            <h3>{{user}}</h3>
-            <p>@{{user.username}}</p>
-            {% if request.user == user %}
-            <a href="{% url 'update-user' %}" class="btn btn--main btn--pill">Edit Profile</a>
-            {% endif %}
-          </div>
-          <div class="profile__about">
-            <h3>About</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur illo tenetur
-              facilis sunt nemo debitis quisquam hic atque aut? Ducimus alias placeat optio
-              accusamus repudiandae quis ab ex exercitationem rem?
-            </p>
+    <!-- Room List Start -->
+    <div class="roomList">
+      <div class="profile">
+        <div class="profile__avatar">
+          <div class="avatar avatar--large active">
+            <img src="{{user.profile.picture.url}}" />
           </div>
         </div>
-
-        <div class="roomList__header">
-          <div>
-            <h2>Rooms Hosted by {{user.username}}</a>
-            </h2>
-          </div>
+        <div class="profile__info">
+          <h3>{{user.profile.name}}</h3>
+          <p>@{{user.username}}</p>
+          <p>Rank: {{user.profile.rank}}</p>
+          {% if request.user == user %}
+          <a href="{% url 'update-user' %}" class="btn btn--main btn--pill"
+            >Edit Profile</a
+          >
+          {% endif %}
         </div>
-
-        {% include 'base/feed_component.html' %}
+        <div class="profile__about">
+          <h3>About</h3>
+          <p>{{user.profile.about}}</p>
+        </div>
       </div>
-      <!-- Room List End -->
-
-      <!-- Activities Start -->
-      {% include 'base/activity_component.html' %}
-      <!-- Activities End -->
+      <div>
+        <h1>Current Progress</h1>
+      </div>
+      {% include 'base/stats_feed.html' %}
+      <div>
+        <h1>Attendances</h1>
+      </div>
+      {% include 'base/attendance_feed.html' %}
     </div>
-  </main>
+    <!-- Room List End -->
 
-  {% endblock content %}
+    <!-- Activities Start -->
+    {% include 'base/activity_component.html' %}
+    <!-- Activities End -->
+  </div>
+</main>
+{% endblock content %}
