--- a/base/templates/base/topics_component.html
+++ b/base/templates/base/topics_component.html
@@ -4,11 +4,11 @@
   </div>
   <ul class="topics__list">
     <li>
-      <a href="{% url 'home' %}">All <span>{{room_count_all}}</span></a>
+      <a href="{% url 'rooms' %}">All <span>{{room_count_all}}</span></a>
     </li>
     {% for topic in topics %} {% if topic.room_set.all.count != 0 %}
     <li>
-      <a href="{% url 'home' %}?q={{topic.name}}"
+      <a href="{% url 'rooms' %}?q={{topic.name}}"
         >{{topic.name}} <span>{{topic.room_set.all.count}}</span></a
       >
     </li>
