--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -399,37 +399,18 @@ a {
   align-items: flex-start;
 }
 
-.layout--4 > .container > div:first-child {
-  flex-basis: 10%;
-  max-width: 22.5rem;
-}
-
-.layout--4 > .container > div:nth-child(2) {
-  flex-basis: 15%;
-  max-width: 55rem;
-}
-
-.layout--4 > .container > div:nth-child(3) {
-  flex-basis: 50%;
-  max-width: 55rem;
-}
-
-.layout--4 > .container > div:last-child {
-  flex-basis: 25%;
-}
-
 .layout--3 > .container > div:first-child {
-  flex-basis: 10%;
-  max-width: 22.5rem;
+  flex-basis: 15%;
+
 }
 
 .layout--3 > .container > div:nth-child(2) {
   flex-basis: 65%;
-  max-width: 55rem;
+  max-width: 53rem;
 }
 
 .layout--3 > .container > div:last-child {
-  flex-basis: 25%;
+  flex-basis: 20%;
 }
 
 .layout--2 > .container > div:first-child {
@@ -485,7 +466,8 @@ a {
 
 @media screen and (max-width: 900px) {
   .activities,
-  .topics {
+  .topics, 
+  .side_nav {
     display: none;
   }
 
@@ -586,7 +568,7 @@ a {
   margin-bottom: 0.2rem;
   padding-left: 0.4rem;
   font-weight: 500;
-  font-size: 2rem;
+  font-size: 2.5rem;
   color: var(--color-light);
   transition: all 0.3s ease-in-out;
 }
@@ -672,21 +654,21 @@ a {
 =>  Room List
 ================================*/
 
-.roomList__header, .studentList__header {
+.roomList__header, .profileList__header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 2.4rem;
 }
 
-.roomList__header h2, .studentList__header h2 {
+.roomList__header h2, .profileList__header h2 {
   text-transform: uppercase;
   font-weight: 500;
   color: var(--color-light);
   letter-spacing: 1px;
 }
 
-.roomList__header p, .studentList__header p {
+.roomList__header p, .profileList__header p {
   font-weight: 500;
   color: var(--color-dark-light);
 }
@@ -779,45 +761,78 @@ a {
   font-size: 1.3rem;
 }
 
-/*========== Student List Student ==========*/
+/*========== Profile List Profile ==========*/
 
-.studentListStudent {
+.profileListProfile {
   margin-bottom: 1rem;
   background-color: var(--color-dark);
   border-radius: 1rem;
-  padding: 1.5rem;
+  padding: 1rem 1rem 0.25rem 1rem;
 }
 
-.studentListStudent__header {
+.profileListProfile__header {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.studentListStudent__author {
+.profileListProfile__author {
   font-weight: 500;
   display: flex;
   align-items: center;
   gap: 1rem;
 }
 
-.studentListStudent__actions {
+.profileListProfile__actions {
   display: flex;
   align-items: flex-start;
   gap: 1rem;
   position: relative;
 }
 
-.studentListStudent__actions span {
+.profileListProfile__actions span {
   font-size: 1.4rem;
   font-weight: 500;
 }
 
-.studentListStudent__content {
-  margin: 1rem 0;
+.progress-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0rem 1rem 0rem 1rem;
 }
 
-.studentListStudent__content a {
+.circular-progress {
+  position: relative;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.circular-progress::before {
+  content: "";
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  background-color: var(--color-dark);
+}
+
+.progress-value {
+  position: relative;
+  font-size: 1.5rem;
+}
+
+.profileListProfile__content {
+  margin: 0.5rem;
+  display: flex;
+  justify-content: center;
+}
+
+.profileListProfile__content a {
   font-size: 2rem;
   font-weight: 500;
   margin-bottom: 1.5rem;
@@ -825,11 +840,11 @@ a {
   transition: all 0.3s ease-in-out;
 }
 
-.studentListStudent__content a:hover {
+.profileListProfile__content a:hover {
   color: var(--color-main);
 }
 
-.studentListStudent__meta {
+.profileListProfile__meta {
   border-top: 1px solid var(--color-dark-medium);
   padding-top: 1rem;
   display: flex;
@@ -837,7 +852,7 @@ a {
   justify-content: space-between;
 }
 
-.studentListStudent__joined {
+.profileListProfile__joined {
   color: var(--color-light-gray);
   display: flex;
   align-items: center;
@@ -846,13 +861,13 @@ a {
   font-weight: 500;
 }
 
-.studentListStudent__joined svg {
+.profileListProfile__joined svg {
   fill: var(--color-main);
   width: 1.6rem;
   height: 1.6rem;
 }
 
-.studentListStudent__topic {
+.profileListProfile__topic {
   padding: 5px 1.5rem;
   background-color: var(--color-dark-medium);
   border-radius: 5rem;
