--- a/base/templates/base/delete.html
+++ b/base/templates/base/delete.html
@@ -24,6 +24,13 @@
       <div class="layout__body">
         <form class="form" action="" method="POST">
           {% csrf_token %}
+
+          <input
+            type="hidden"
+            name="next"
+            value="{{ request.META.HTTP_REFERER }}"
+          />
+
           <div class="form__group">
             <p>Are you sure you want to delete "{{obj}}"?</p>
           </div>
