--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -99,6 +99,14 @@ a {
   color: var(--color-dark);
 }
 
+.btn--mini {
+  background-color: var(--color-main);
+  color: var(--color-dark);
+  padding: 0.4rem 0.4rem;
+  gap: 0.5rem;
+  font-size: 1.3rem;
+  margin-right: 0.5rem;
+}
 .btn:hover {
   opacity: 0.9;
 }
@@ -114,11 +122,16 @@ a {
   height: 1.6rem;
 }
 
+.btn--mini svg {
+  height: 1.4rem;
+  width: 1.4rem;
+}
 .btn--pill {
   border-radius: 10rem;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   font-weight: 700;
-  padding: 6px 2.5rem;
+  padding: 2px 1rem;
+    margin: 5px;
   color: var(--color-main);
   background: transparent;
   border: 2px solid var(--color-main);
@@ -255,7 +268,7 @@ a {
   gap: 1rem;
 }
 
-@media screen and (min-width: 500px) {
+@media screen and (min-width: 615px) {
   .mobile-menu {
     display: none;
   }
@@ -272,19 +285,20 @@ a {
 
 .header > .container {
   display: flex;
-  gap: 9.5rem;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .header__logo,
 .header__user {
   display: flex;
-  gap: 2rem;
+  gap: 1.2rem;
   align-items: center;
 }
 
 .header__logo > img {
-  height: 3.2rem;
-  width: 3.2rem;
+  height: 8rem;
+  width: 8rem;
 }
 
 .header__logo > h1 {
@@ -317,31 +331,16 @@ a {
   color: var(--color-light);
 }
 
-@media screen and (max-width: 800px) {
-  .header__search input {
-    width: 20rem;
-  }
-
-  .header > .container {
-    gap: 3rem;
-  }
-}
-
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 400px) {
   .header__logo h1 {
     display: none;
   }
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 615px) {
   .header__search {
     display: none;
   }
-}
-
-.header__menu {
-  margin-left: auto;
-  position: relative;
 }
 
 .header__menu a {
@@ -399,6 +398,13 @@ a {
   align-items: flex-start;
 }
 
+.layout--2>.container>div:first-child {
+  flex-basis: 72%;
+}
+
+.layout--2>.container>div:last-child {
+  flex-basis: 25%;
+}
 .layout--3 > .container > div:first-child {
   flex-basis: 15%;
 
@@ -413,13 +419,6 @@ a {
   flex-basis: 20%;
 }
 
-.layout--2 > .container > div:first-child {
-  flex-basis: 72%;
-}
-
-.layout--2 > .container > div:last-child {
-  flex-basis: 25%;
-}
 /*========== Layout Box ==========*/
 
 .layout__box {
@@ -427,7 +426,7 @@ a {
   max-width: 48rem;
   min-height: 30rem;
   position: absolute;
-  top: 15%;
+  top: 20%;
   left: 50%;
   transform: translate(-50%);
   background-color: var(--color-dark);
@@ -464,11 +463,17 @@ a {
   margin: 3rem;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 800px) {
   .activities,
   .topics, 
   .side_nav {
     display: none;
+  }
+
+  .layout > .container {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
   }
 
   .layout--3 > .container > div:nth-child(2) {
@@ -477,7 +482,7 @@ a {
 }
 
 /*==============================
-=>  Topics
+=>Forms
 ================================*/
 
 .form__group {
@@ -643,10 +648,10 @@ a {
   display: block;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 615px) {
   .mobile-menu .header__search {
     display: block;
-    margin-bottom: 2.4rem;
+    margin: 0 0.5rem 2.4rem 0.5rem;
   }
 }
 
@@ -658,7 +663,7 @@ a {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 2.4rem;
+  margin: 2rem 0 0.5rem 0;
 }
 
 .roomList__header h2, .profileList__header h2 {
@@ -673,6 +678,15 @@ a {
   color: var(--color-dark-light);
 }
 
+@media screen and (max-width: 500px) {
+  .roomList__header,
+  .profileList__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 2rem 0 0.5rem 0.5rem;
+  }
+}
 /*========== Room List Room ==========*/
 
 .roomListRoom {
@@ -709,7 +723,6 @@ a {
 
 .roomListRoom__actions svg {
   fill: var(--color-main);
-
   width: 1.6rem;
   height: 1.6rem;
 }
@@ -761,7 +774,9 @@ a {
   font-size: 1.3rem;
 }
 
-/*========== Profile List Profile ==========*/
+/*==============================
+=>  Profile List Profile
+================================*/
 
 .profileListProfile {
   margin-bottom: 1rem;
@@ -783,53 +798,11 @@ a {
   gap: 1rem;
 }
 
-.profileListProfile__actions {
-  display: flex;
-  align-items: flex-start;
-  gap: 1rem;
-  position: relative;
-}
-
-.profileListProfile__actions span {
-  font-size: 1.4rem;
-  font-weight: 500;
-}
-
-.progress-wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 0rem 1rem 0rem 1rem;
-}
-
-.circular-progress {
-  position: relative;
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.circular-progress::before {
-  content: "";
-  position: absolute;
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  background-color: var(--color-dark);
-}
-
-.progress-value {
-  position: relative;
-  font-size: 1.5rem;
-}
-
 .profileListProfile__content {
   margin: 0.5rem;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .profileListProfile__content a {
@@ -851,7 +824,7 @@ a {
   align-items: center;
   justify-content: space-between;
 }
-
+  
 .profileListProfile__joined {
   color: var(--color-light-gray);
   display: flex;
@@ -873,6 +846,209 @@ a {
   border-radius: 5rem;
   font-weight: 500;
   font-size: 1.3rem;
+}
+  
+@media screen and (max-width: 500px) {
+  .profileListProfile {
+    margin: 0 0.5rem 1rem 0.5rem;
+    background-color: var(--color-dark);
+    border-radius: 1rem;
+    padding: 0.25rem 0.18rem 0.1rem 0.18rem;
+  }
+
+  .profileListProfile__content {
+    margin: 0rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+}
+  
+/*========== Circular Progress ==========*/
+  
+.circular-progress-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0rem 1rem 0rem 1rem;
+}
+
+.circular-progress {
+  position: relative;
+  width: 52px;
+  height: 52px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.circular-progress::before {
+  content: "";
+  position: absolute;
+  width: 42px;
+  height: 42px;
+  border-radius: 50%;
+  background-color: var(--color-dark);
+}
+
+.value-wrapper {
+  display: inline-block;
+}
+
+.progress-value {
+  display: block;
+  position: relative;
+  text-align: center;
+  font-size: 1.5rem;
+  line-height: normal;
+  border-bottom: 2px solid var(--color-light-gray);
+  width: 3rem;
+}
+
+.max-value {
+  display: block;
+  position: relative;
+  text-align: center;
+  font-size: 1.5rem;
+  line-height: normal;
+}
+
+@media screen and (max-width: 500px) {
+  .circular-progress-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 0.2rem 0 0.2rem;
+    max-width: fit-content;
+  }
+
+  .progress-label {
+    text-align: center;
+    font-size: 1rem;
+  }
+
+  .circular-progress {
+    position: relative;
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .circular-progress::before {
+    content: "";
+    position: absolute;
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    background-color: var(--color-dark);
+  }
+                        
+  .progress-value {
+    display: block;
+    position: relative;
+    text-align: center;
+    font-size: 1.2rem;
+    line-height: normal;
+    border-bottom: 2px solid var(--color-light-gray);
+    width: 3rem;
+  }
+
+  .max-value {
+    display: block;
+    position: relative;
+    text-align: center;
+    font-size: 1.2rem;
+    line-height: normal;
+  }
+}
+                        
+@media screen and (max-width: 400px) {
+  .progress-label {
+    text-align: center;
+    font-size: 1rem;
+  }
+
+  .circular-progress {
+    position: relative;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    }
+
+  .circular-progress::before {
+    content: "";
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: var(--color-dark);
+  }
+}
+
+/*========== Attendance and Tournaments ==========*/
+
+.stats {
+  margin-bottom: 1rem;
+  background-color: var(--color-dark);
+  border-radius: 1rem;
+  padding: 1rem;
+  justify-content: right;
+}
+
+.stats__box {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid var(--color-light-gray);
+}
+  
+.stats__box:last-child {
+  border-bottom: none;
+}
+  
+.stats__content {
+  display: flex;
+  flex-direction: column;
+}
+  
+.stats__actions a {
+  padding-left: 1rem;
+}
+  
+@media screen and (max-width: 500px) {
+  .stats {
+    margin: 0 0.5rem 1rem 0.5rem;
+    background-color: var(--color-dark);
+    border-radius: 1rem;
+    padding: 0.5rem;
+  }
+  
+  .stats__content {
+    display: flex;
+    flex-direction: column;
+    max-width: 65%;
+  }
+}
+
+.statsPage .layout__body {
+  margin: 1rem;
+}
+
+.stats-button {
+  padding: 1rem 0rem;
+  display: flex;
+  justify-content: right;
+}
+
+.stats-button a {
+  margin-right: 0rem;
 }
 
 /*==============================
@@ -946,6 +1122,14 @@ a {
 }
 
 /*==============================
+=>  Create Stats
+================================*/
+
+.create-stats.layout .layout__box {
+  max-width: 68rem;
+}
+
+/*==============================
 =>  Update Account
 ================================*/
 
@@ -1002,27 +1186,33 @@ a {
 =>  Profile
 ================================*/
 .profile {
-  margin-bottom: 3rem;
+  display: flex;
 }
 
 .profile__avatar {
-  text-align: center;
+  display: grid;
+    justify-items: center;
 }
 
 .profile__info {
-  text-align: center;
+  margin-left: 0.5rem;
+}
+  
+.profile__info span {
+  display: flex;
+  align-items: center;
 }
 
 .profile__info h3 {
   font-size: 2rem;
   color: var(--color-light);
   font-weight: 400;
+  padding-right: 0.5rem;
 }
 
 .profile__info p {
   color: var(--color-main);
   font-weight: 500;
-  margin-bottom: 1rem;
 }
 
 .profile__about {
@@ -1043,6 +1233,28 @@ a {
   color: var(--color-dark-light);
 }
 
+@media screen and (max-width: 500px) {
+  .profile__info {
+    margin-left: 0rem;
+  }
+
+  .profile__info h3 {
+    font-size: 1.8rem;
+    color: var(--color-light);
+    font-weight: 400;
+    padding-right: 0.4rem;
+  }
+
+  .profile__info p {
+    font-size: 1.3rem;
+    color: var(--color-main);
+    font-weight: 500;
+  }
+
+  .profile__about {
+    margin: 2rem 0 0 0.5rem;
+  }
+}
 /*==============================
 =>  Room
 ================================*/
