--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -2,12 +2,12 @@
 
 <main class="layout layout--3">
   <div class="container">
-    <!-- Topics Start -->
+    <!-- Side Nav Start -->
     {% include 'base/side_nav.html' %}
-    <!-- Topics End -->
+    <!-- Side Nav End -->
 
-    <!-- Room List Start -->
-    <div class="studentList">
+    <!-- Profile List Start -->
+    <div class="profileList">
       <div class="mobile-menu">
         <form class="header__search" action="{% url 'home' %}" method="GET">
           <label>
@@ -36,13 +36,29 @@
         </div>
       </div>
 
-      <div class="studentList__header">
-        <div>
-          <h2>Students</h2>
-        </div>
+      <form class="header__search" method="GET" action="{% url 'home' %}">
+        <label>
+          <svg
+            version="1.1"
+            xmlns="http://www.w3.org/2000/svg"
+            width="32"
+            height="32"
+            viewBox="0 0 32 32"
+          >
+            <title>search</title>
+            <path
+              d="M32 30.586l-10.845-10.845c1.771-2.092 2.845-4.791 2.845-7.741 0-6.617-5.383-12-12-12s-12 5.383-12 12c0 6.617 5.383 12 12 12 2.949 0 5.649-1.074 7.741-2.845l10.845 10.845 1.414-1.414zM12 22c-5.514 0-10-4.486-10-10s4.486-10 10-10c5.514 0 10 4.486 10 10s-4.486 10-10 10z"
+            ></path>
+          </svg>
+          <input name="q" placeholder="Search for students" />
+        </label>
+      </form>
+
+      <div class="profileList__header">
+        <h2>Students</h2>
       </div>
 
-      {% include 'base/student_feed.html' %}
+      {% include 'base/profile_list_feed.html' %}
     </div>
     <!-- Room List End -->
 
