changed class name

--- a/base/templates/base/topics.html
+++ b/base/templates/base/topics.html
@@ -1,5 +1,5 @@
 {% extends 'main.html' %} {% block content%}
-<main class="create-room layout">
+<main class="topics layout">
   <div class="container">
     <div class="layout__box">
       <div class="layout__boxHeader">
