--- a/base/templates/base/login_register.html
+++ b/base/templates/base/login_register.html
@@ -74,7 +74,8 @@
         {% endcomment %}
 
         <form class="form" action="" method="POST">
-          {% csrf_token %} {% for field in form %}
+          {% csrf_token %}
+          {% for field in form %}
           <div class="form__group form__group">
             <label for="room_name">{{field.label}}</label>
             {{field}}
