--- a/base/templates/base/current_progress.html
+++ b/base/templates/base/current_progress.html
@@ -1,3 +1,4 @@
+{% load static %}
 <div class="profileList__header">
   <h2>Current Progress</h2>
 </div>
@@ -8,7 +9,7 @@
       class="profileListProfile__author"
     >
       <div class="avatar avatar--small">
-        <img src="{{user.profile.picture.url}}" />
+        <img src="{% static user.profile.picture.url %}" />
       </div>
       <span>@{{user.username}}</span>
     </a>
