hide admin profile

--- a/base/templates/base/profile_list_feed.html
+++ b/base/templates/base/profile_list_feed.html
@@ -1,5 +1,6 @@
 {% load static %}
 {% for profile in profiles %}
+{% if profile.name != 'admin' %}
 <div class="profileListProfile">
   <div class="profileListProfile__header">
     <a
@@ -61,4 +62,5 @@
     </div>
   </div>
 </div>
+{% endif %}
 {% endfor %}
