--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -58,6 +58,8 @@
         <h2>Students</h2>
       </div>
 
+      <p>{{time}}</p>
+
       {% include 'base/profile_list_feed.html' %}
     </div>
     <!-- Room List End -->
