--- a/base/templates/base/profile_list_feed.html
+++ b/base/templates/base/profile_list_feed.html
@@ -9,7 +9,7 @@
       <div class="avatar avatar--small">
         <img src="{{profile.picture.url}}" />
       </div>
-      <span>{{profile.name}} @{{profile.user.username}}</span>
+      <span>{{profile.name}}</span>
     </a>
   </div>
   <div class="profileListProfile__content">
