--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -35,8 +35,7 @@
             <img src="{{request.user.profile.picture.url}}" />
           </div>
           <p>
-            {{request.user.profile.name}}
-            <span>@{{request.user.username}}</span>
+            {{request.user.first_name}}
           </p>
         </a>
         <button class="dropdown-button">
@@ -54,7 +53,7 @@
       </div>
 
       <div class="dropdown-menu">
-        <a href="{% url 'update-user' %}" class="dropdown-link"
+        <a href="{% url 'update-user' request.user.id %}" class="dropdown-link"
           ><svg
             version="1.1"
             xmlns="http://www.w3.org/2000/svg"
