--- a/base/templates/base/stats.html
+++ b/base/templates/base/stats.html
@@ -19,16 +19,16 @@
             </svg>
           </a>
           {% if 'attendances' in request.path %}
-          <h3>{{profile.name}}'s Attendances</h3>
+          <h3>{{profile.user.first_name}}'s Attendances</h3>
           {% endif %}
           {% if 'tournaments' in request.path %}
-          <h3>{{profile.name}}'s Tournaments</h3>
+          <h3>{{profile.user.first_name}}'s Tournaments</h3>
           {% endif %}
           {% if 'leadership-hours' in request.path %}
-          <h3>{{profile.name}}'s Leadership Hours</h3>
+          <h3>{{profile.user.first_name}}'s Leadership Hours</h3>
           {% endif %}
           {% if 'practical-scores' in request.path %}
-          <h3>{{profile.name}}'s Practical Scores</h3>
+          <h3>{{profile.user.first_name}}'s Practical Scores</h3>
           {% endif %}
         </div>
       </div>
@@ -41,7 +41,7 @@
             <div class="stats__content">
               <span>Date: {{attendance.date}}</span>
             </div>
-            {% if request.user == profile.user %}
+            {% if request.user == profile.user or request.user.is_superuser%}
             <div class="stats__actions">
               <a href="{% url 'update-attendance' attendance.id %}"> edit </a>
               <a href="{% url 'delete-attendance' attendance.id %}"> delete </a>
@@ -49,9 +49,9 @@
             {% endif %}
           </div>
           {% endfor %}
-          {% if request.user == profile.user %}
+          {% if request.user == profile.user or request.user.is_superuser%}
           <div class="stats-button">
-            <a class="btn btn--mini" href="{% url 'create-attendance' %}">
+            <a class="btn btn--mini" href="{% url 'create-attendance' profile.id %}">
               <svg
                 version="1.1"
                 xmlns="http://www.w3.org/2000/svg"
@@ -77,7 +77,7 @@
               <span>Event: {{tournament.event}}</span>
               <span>Date: {{tournament.date}}</span>
             </div>
-            {% if request.user == profile.user %}
+            {% if request.user == profile.user or request.user.is_superuser %}
             <div class="stats__actions">
               <a href="{% url 'update-tournament' tournament.id %}"> edit </a>
               <a href="{% url 'delete-tournament' tournament.id %}"> delete </a>
@@ -85,9 +85,9 @@
             {% endif %}
           </div>
           {% endfor %}
-          {% if request.user == profile.user %}
+          {% if request.user == profile.user or request.user.is_superuser %}
           <div class="stats-button">
-            <a class="btn btn--mini" href="{% url 'create-tournament' %}">
+            <a class="btn btn--mini" href="{% url 'create-tournament' profile.id %}">
               <svg
                 version="1.1"
                 xmlns="http://www.w3.org/2000/svg"
@@ -114,7 +114,7 @@
               <span>Date: {{leadership_hour.date}}</span>
               <span>Hours: {{leadership_hour.hour}}</span>
             </div>
-            {% if request.user == profile.user %}
+            {% if request.user == profile.user or request.user.is_superuser %}
             <div class="stats__actions">
               <a href="{% url 'update-leadership-hours' leadership_hour.id %}"> edit </a>
               <a href="{% url 'delete-leadership-hours' leadership_hour.id %}"> delete </a>
@@ -122,9 +122,9 @@
             {% endif %}
           </div>
           {% endfor %}
-          {% if request.user == profile.user %}
+          {% if request.user == profile.user or request.user.is_superuser %}
           <div class="stats-button">
-            <a class="btn btn--mini" href="{% url 'create-leadership-hours' %}">
+            <a class="btn btn--mini" href="{% url 'create-leadership-hours' profile.id  %}">
               <svg
                 version="1.1"
                 xmlns="http://www.w3.org/2000/svg"
@@ -160,7 +160,7 @@
           {% endfor %}
           {% if request.user.is_superuser %}
           <div class="stats-button">
-            <a class="btn btn--mini" href="{% url 'create-practical-score' %}">
+            <a class="btn btn--mini" href="{% url 'create-practical-score' profile.id %}">
               <svg
                 version="1.1"
                 xmlns="http://www.w3.org/2000/svg"
