--- a/base/templates/base/delete.html
+++ b/base/templates/base/delete.html
@@ -1,10 +1,10 @@
-{% extends 'main.html' %} {% block content%}
+{% extends 'main.html' %} {% block content %}
 <main class="delete-item layout">
   <div class="container">
     <div class="layout__box">
       <div class="layout__boxHeader">
         <div class="layout__boxTitle">
-          <a href="{{request.META.HTTP_REFERER}}">
+          <a href="{% url 'user-profile' id %}">
             <svg
               version="1.1"
               xmlns="http://www.w3.org/2000/svg"
@@ -28,7 +28,7 @@
           <input
             type="hidden"
             name="next"
-            value="{{ request.META.HTTP_REFERER }}"
+            value="{% url 'user-profile' id %}"
           />
 
           <div class="form__group">
@@ -43,4 +43,4 @@
     </div>
   </div>
 </main>
-{% endblock content%}
+{% endblock content %}
