--- a/base/templates/base/profile_list_feed.html
+++ b/base/templates/base/profile_list_feed.html
@@ -10,7 +10,7 @@
       <div class="avatar avatar--small">
         <img src="{% static profile.picture.url %}" />
       </div>
-      <span>{{profile.name}} @{{profile.user.username}}</span>
+      <span>{{profile.name}}</span>
     </a>
   </div>
   {% comment %} <div class="profileListProfile__content">
