--- a/base/templates/base/profile.html
+++ b/base/templates/base/profile.html
@@ -20,7 +20,9 @@
         <div class="profile__info">
           <span>
             <h3>{{user.profile.name}}</h3>
+            {% if request.user == user %}
             <p>@{{user.username}}</p>
+            {% endif %}
           </span>
           <p>Rank: {{user.profile.rank}}</p>
           <p>Last Promoted: {{user.profile.last_promoted}}</p>
