remove username and update gitignore

--- a/base/templates/base/current_progress.html
+++ b/base/templates/base/current_progress.html
@@ -11,7 +11,7 @@
       <div class="avatar avatar--small">
         <img src="{% static user.profile.picture.url %}" />
       </div>
-      <span>@{{user.username}}</span>
+      <span>{{profile.name}}</span>
     </a>
   </div>
   <div class="profileListProfile__content">
