add back progress circles

--- a/base/templates/base/profile_list_feed.html
+++ b/base/templates/base/profile_list_feed.html
@@ -13,7 +13,7 @@
       <span>{{profile.name}}</span>
     </a>
   </div>
-  {% comment %} <div class="profileListProfile__content">
+  <div class="profileListProfile__content">
     <div class="circular-progress-wrapper">
       <div class="circular-progress" id="attendance">
         <span class="value-wrapper">
@@ -60,7 +60,7 @@
       </div>
       <span class="progress-label">Practical Score</span>
     </div>
-  </div> {% endcomment %}
+  </div>
 </div>
 {% endif %}
 {% endfor %}
